--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.fluxes.cookbook" >
 
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -10,13 +10,10 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-
         <activity
             android:name=".Login"
             android:label="@string/title_activity_login" >
-
         </activity>
-
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main" >
@@ -25,13 +22,15 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
             android:name=".NewRecipe"
             android:label="@string/title_activity_new_recipe" >
         </activity>
-
+        <activity
+            android:name=".OpenRecipe"
+            android:label="@string/title_activity_open_recipe" >
+        </activity>
     </application>
 
 </manifest>
