--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <application
         android:allowBackup="true"
         android:configChanges="keyboardHidden|orientation"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_bubble_chart_black_18dp"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
@@ -30,6 +30,14 @@
         <activity
             android:name=".OpenRecipe"
             android:label="@string/title_activity_open_recipe" >
+        </activity>
+        <activity
+            android:name=".Favorites"
+            android:label="@string/title_activity_favorites" >
+        </activity>
+        <activity
+            android:name=".UserInfo"
+            android:label="@string/title_activity_user_info" >
         </activity>
     </application>
 
